--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^4.0.25",
+    "hc-sticky": "^2.2.7",
     "inputmask": "^5.0.6",
     "jquery": "^3.6.0",
     "plyr": "^3.6.12",
