--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@fancyapps/ui": "^4.0.26",
     "hc-sticky": "^2.2.7",
     "inputmask": "^5.0.6",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.0",
     "plyr": "^3.6.12",
     "swiper": "^7.4.1"
